Refactor: Arquitetura SRP e suporte a CSVs sem modelagem prévia